--- a/app/home/page.module.css
+++ b/app/home/page.module.css
@@ -10,7 +10,6 @@
 .firstSession {
   display: flex;
   flex-direction: column;
-  
   min-height: 100vh;
   background-color: rgba(255, 255, 255, 0.4);
 }
@@ -47,9 +46,9 @@
   color: #ffffff;
   text-align: center;
   margin-top: 3rem;
-  font-size: 2rem;
+  width: 100%;
+  font-size: 4rem;
   font-weight: 700;
-  /* Thick black border */
   border-radius: 8px;
   display: inline-block;
   padding: 0.25rem 0.75rem;
@@ -62,7 +61,6 @@
   margin-top: 1rem;
   display: flex;
   justify-content: center;
-  background-color: white;
 }
 
 .featureList {
@@ -70,11 +68,13 @@
   list-style-type: circle; /* circle bullets */
   padding-left: 1.25rem; /* space for bullets */
   max-width: 720px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .featureList li {
+  color: white;
   margin: 0.15rem 0;
-  font-size: 12px;
+  font-size: 1.4rem;
 }
 
 /* Smartwatch image section */
