--- a/components/elements/AppleStoreButton/AppleStoreButton.module.css
+++ b/components/elements/AppleStoreButton/AppleStoreButton.module.css
@@ -2,6 +2,7 @@
 .appleStoreButton {
 	display: inline-flex;
 	align-items: center;
+	width: 100%;
 	gap: 10px;
 	text-decoration: none;
 	color: #fff;
@@ -33,12 +34,12 @@
 }
 
 .kicker {
-	font-size: 10px;
+	font-size: 1rem;
 	opacity: 0.85;
 }
 
 .brand {
-	font-size: 14px;
+	font-size: 1.8rem;
 	font-weight: 600;
 }
 
